@@ -23,7 +23,7 @@ public class SearchTest {
   public void testGetData() {
     SearchRequest searchRequest = new SearchRequest("dog", Instant.now(), "2");
     assertEquals(
-        searchDataAccessObject.getData(searchRequest).getResponses().getFirst().getFullText(),
+        searchDataAccessObject.getData(searchRequest).getResponses().get(0).getFullText(),
         "I love dogs");
   }
 }
